--- a/AUTHORS
+++ b/AUTHORS
@@ -6,5 +6,6 @@
 Paul Austin <paul@ni.com> SDG, TypeManager, Execution, VirtualInstrument, Primitives
 James Levitt <james.levitt@ni.com> Generic-Un/BinOp, Bug fixes, Valgrind
 Milan Raj <milan.raj@ni.com> Emscripten projects
-Ethan Searl <ethan.searl@ni.com> Generic-Un/BinOp, Math, String, Testing,
+Ethan Searl <ethan.searl@ni.com> Generic-Un/BinOp, Math, String, Testing
 Brandon Vaughan <brandon.vaughan@ni.com> Initial string and FileIO
+Wei Zhang<Wei.zhang@ni.com> Date and time formatting
