Ceanup: Removed some extra files from trevor pull. emscripten build options.
version bumped. The working rule is that versions that end in a "+" are
smaller steps past the last released build. When a new release build is made
the number should bump as well andante "+" removed. This includes released
prerelease builds.

--- a/AUTHORS
+++ b/AUTHORS
@@ -11,3 +11,4 @@ Brandon Vaughan <brandon.vaughan-at-ni.com> Initial string and FileIO
 Wei Zhang<Wei.zhang-at-ni.com> Date and time formatting
 Carlos Gonzalez<carlos.gonzalez-at-ni.com> HttpClient
 Stephen Schwahn<schwahn3-at-gmail.com> HttpClient
+Trevor Nelligan<trevornelligan-at-tamu.edu> WebSocket
