Add Devin Carr to AUTHORS

--- a/AUTHORS
+++ b/AUTHORS
@@ -12,3 +12,4 @@ Wei Zhang<Wei.zhang-at-ni.com> Date and time formatting
 Carlos Gonzalez<carlos.gonzalez-at-ni.com> HttpClient
 Stephen Schwahn<schwahn3-at-gmail.com> HttpClient
 Trevor Nelligan<trevornelligan-at-tamu.edu> WebSocket
+Devin Carr<devin.carr0-at-gmail.com> Build/Test/Deploy, Strings
