--- a/AUTHORS
+++ b/AUTHORS
@@ -13,3 +13,4 @@ Carlos Gonzalez<carlos.gonzalez-at-ni.com> HttpClient
 Stephen Schwahn<schwahn3-at-gmail.com> HttpClient
 Trevor Nelligan<trevornelligan-at-tamu.edu> WebSocket
 Devin Carr<devin.carr0-at-gmail.com> Build/Test/Deploy, Strings
+Sankara Muthukrishnan Waveform
