--- a/AUTHORS
+++ b/AUTHORS
@@ -14,3 +14,4 @@ Stephen Schwahn<schwahn3-at-gmail.com> HttpClient
 Trevor Nelligan<trevornelligan-at-tamu.edu> WebSocket
 Devin Carr<devin.carr0-at-gmail.com> Build/Test/Deploy, Strings
 Sankara Muthukrishnan Waveform
+Trevor Chipley <trevor.chipley-at-ni.com> ASan fixes
