--- a/AUTHORS
+++ b/AUTHORS
@@ -18,3 +18,4 @@ Trevor Nelligan<trevornelligan-at-tamu.edu> WebSocket
 Devin Carr<devin.carr0-at-gmail.com> Build/Test/Deploy, Strings
 Sankara Muthukrishnan Waveform
 Trevor Chipley <trevor.chipley-at-ni.com> ASan fixes
+Devika G N <devika.g.n-at-ni.com> Emscripten tool
